header and state for cart added

--- a/src/index.css
+++ b/src/index.css
@@ -255,6 +255,7 @@ button {
 button,
 [type=button] {
   -webkit-appearance: button;
+  appearance: button;
 }
 button:not(:disabled),
 [type=button]:not(:disabled) {
@@ -299,6 +300,7 @@ button:not(:disabled),
 ::file-selector-button {
   font: inherit;
   -webkit-appearance: button;
+  appearance: button;
 }
 
 .display-2 {
